# findingAlpha

./: .gitignore  FINDING_ALPHA_PHASED_BUILD_PLAN.md  FINDING_ALPHA_SOURCE_OF_TRUTH.md  HANDOFF.md  README.md  STATE.md  advisory.json  critical_gap.md  finding alpha.txt  pyproject.toml  session_notes.md  setup.sh
.claude/: settings.local.json
dashboard/: app.py
data/: bybit_BTCUSDT_15m_spike.parquet  macro_calendar.json
md files for ollama/: FINDING_ALPHA_DATA_FEEDS.md  finding_alpha_training_03_risk_management.md  finding_alpha_training_04_sessions_timing.md  finding_alpha_training_05_historical_examples.md  finding_alpha_training_06_decision_framework.md
notebooks/: _probe_binance_oi.py  phase10_testnet_smoke.py  phase1_nautilus_spike.py  phase1_spike.py  phase3_fetch_data.py  phase3_fix_binance_oi.py  phase5_backtest_runner.py  phase7_event_validation_runner.py  phase7b_breakout_focus_short_1h.py  phase7b_breakout_probe.py  phase7b_breakout_refine_1h.py  phase7b_candidate_low_risk.py  phase7b_candidate_walk_forward.py  phase7b_fetch_extended_bybit.py  phase7b_prev_day_breakdown_candidate_report.py  phase7b_strategy_refinement_grid.py  phase7b_validate_current_15m.py  phase7b_waqar_strategy_1_probe.py  phase7c_short_composite_v1_report.py  phase8_paper_runner.py  phase8_short_composite_runner.py  phase8_simulation_runner.py  phase9_advisory_runner.py
paper/: advisory_log.jsonl  matrix.jsonl
tests/: test_advisory.py  test_contracts.py  test_data_loaders.py  test_execution.py  test_features.py  test_live_execution.py  test_matrix.py  test_paper.py  (+4 more)
(+156 files in other folders)
