[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finding-alpha"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyarrow>=16.0",
    "pandas>=2.2",
    "polars>=0.20",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pybit>=5.6",
    "httpx>=0.27",
    "orjson>=3.10",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
]
research = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]
dashboard = [
    "streamlit>=1.36",
    "plotly>=5.22",
    "streamlit-autorefresh>=1.0",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
